Update GET FREE VBUCKS WITH NO HASSLE.html

--- a/student_12/GET FREE VBUCKS WITH NO HASSLE.html
+++ b/student_12/GET FREE VBUCKS WITH NO HASSLE.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>GET FREE VBUCKS WITH NO HASSLE LMAO THIS IS COMPLETELY FAKE</title>
+<title>GET FREE VBUCKS WITH NO HASSLE LMAO THIS IS COMPLETELY FAKE LOLOLOLOLOLLOLOLOLOLOL OK HAHAHHAHHAHAHAH EEEEEEEEEEE</title>
 </head>
 <body>
 Hey everybody! Fortnite is the most played game in the world, which means that its currency is highly wanted. Here you can get up to 100,000 free vbucks with no hassle! all you have to do is give us your password and username and youll immediately get 100,000 vbucks
