Update GET FREE VBUCKS WITH NO HASSLE.html

--- a/student_12/GET FREE VBUCKS WITH NO HASSLE.html
+++ b/student_12/GET FREE VBUCKS WITH NO HASSLE.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>GET FREE VBUCKS WITH NO HASSLE</title>
+<title>GET FREE VBUCKS WITH NO HASSLE LMAO THIS IS FAKE EEEEEEEEEEEEE YOU NEED MENTAL HELP LOLOLOLOLOL </title>
 </head>
 <h1>Hey everybody! Fortnite is the most played game in the world, which means that its currency is highly wanted. Here you can get up to <b>100,000 free vbucks with no hassle!</b> all you have to do is give us your password and username and youll immediately get 100,000 vbucks</h1>
 <h2>Here in the website, we have continued to stay strong after being taken down by EpicGames at least 5 times. To help our community you can <b>give us you credit card info!</b></h2>
