--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,6 +4,6 @@
 <title> Ibrahim Ahmed </title>
 </head>
 <h1>Hello there!</h1>
-<font>My name is <u><b><i>Ibrahim</b></i></u>.</font>
+<font color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
 <h2>This is my <b><i>first</b></i> website</h2>
 </html>
