--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -5,5 +5,8 @@
 </head>
 <h1>Hello there!</h1>
 <font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
+<body>
 <h2>This is my <b><i>first</b></i> website</h2>
+  <a href "https://www.google.com/"> Google </a>
+</body>
 </html>
