--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -7,6 +7,6 @@
 <font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
-  <a href "https://www.google.com/"> Google </a>
+  <a href "https://www.google.com"> Google </a>
 </body>
 </html>
