--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -7,6 +7,6 @@
 <font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
- <p><a href="http://www.google.com">Very cool websire</a>that you should visit</p>
+ <p><a href="http://www.google.com">Very cool website</a> that you should visit right here. In this website, you can do many things.</p>
 </body>
 </html>
