--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -7,6 +7,6 @@
 <font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
- <p><i><u><a href="http://www.coolmathgames.com">Very cool website</a></u></i> that you should visit right here. In this website, you can do many things.</p>
+ <p><i><u><a href="http://www.coolmathgames.com">Very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</p>
 </body>
 </html>
