--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -3,10 +3,12 @@
 <head>
 <title> Ibrahim Ahmed </title>
 </head>
+ <font size=10>
 <h1>Hello there!</h1>
 <font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
  <p><font size=10><i><u><a href="http://www.coolmathgames.com">Very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</font></p>
+ </font>
 </body>
 </html>
