--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -8,7 +8,9 @@
 <font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
- <p><font size=10><i><u><a href="http://www.coolmathgames.com">Very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</font></p>
+ <h3> Thanks for visiting! Check out:</h3>
  </font>
+ <p><font size=10><i><u><a href="http://www.coolmathgames.com">vA ery cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</font></p>
+ 
 </body>
 </html>
