--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -10,7 +10,8 @@
 <h2>This is my <b><i>first</b></i> website</h2>
  <h3> Thanks for visiting! Check out:</h3>
  </font>
- <p><font size=10><i><u><a href="http://www.coolmathgames.com">vA ery cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</font></p>
- 
+  <font size=2>
+ <p><font size=10><i><u><a href="http://www.coolmathgames.com">A very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</font></p>
+  </font>
 </body>
 </html>
