--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -5,13 +5,11 @@
 </head>
  <font size=5>
 <h1>Hello there!</h1>
-<font size="10" color="green">My name is <u><b><i>Ibrahim</b></i></u>.</font>
+<font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
- <h3> Thanks for visiting! Check out:</h3>
+ <h3> Thanks for visiting my website! Check out:</h3>
  </font>
-  <font size=2>
- <p><font size=10><i><u><a href="http://www.coolmathgames.com">A very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. I may or may not have made this webiste.</font></p>
-  </font>
+ <p><font size=2><i><u><a href="http://www.coolmathgames.com">A very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
 </body>
 </html>
