--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -11,6 +11,6 @@
  <h3> Thanks for visiting my website! Check out:</h3>
  </font>
   <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
- <p><font size=4><i><u><a href="http://www.coolmathgames.com">A very cool website</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
+ <p><font size=4><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
 </body>
 </html>
