--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -10,7 +10,7 @@
 <h2>This is my <b><i>first</b></i> website</h2>
  <h3> Thanks for visiting my website! Check out:</h3>
  </font>
-  <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website. Keep refreshing the page on it.</font>
+  <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=4><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
 </body>
 </html>
