--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -12,6 +12,6 @@
  </font>
   <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=4><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
-    <img src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="500" height="333">
+    <img src style="padding: 0 15px; float: left;""https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="500" height="333">
 </body>
 </html>
