--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,7 +4,8 @@
 <title> Ibrahim Ahmed </title>
 </head>
  <font size=5>
-<h1>Hello there!</h1>\    <img src style="padding: 0 15px; float: right;""https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="500" height="333">
+<h1>Hello there!</h1>
+  <img style="padding: 0 15px; float: right;" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="500" height="333">
   <p style="margin-top: 20px;"> </p>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
 <body>
