--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -24,7 +24,7 @@
     margin: 0;
   }
   body {
-    background: black;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: center;
