--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -1,6 +1,5 @@
 <! DOCTYPE html>
 <html>
- <background color=blue>
 <head>
 <title> Ibrahim Ahmed </title>
 </head>
@@ -16,9 +15,8 @@
   <font size=5> Check out: </font>
  <br> <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=4><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
-</body>
- </background>
-  <br> <style>
+  </body>
+ <style>
   html, body {
     height: 100%;
     margin: 0;
@@ -29,7 +27,7 @@
     align-items: center;
     justify-content: center;
   }
-  canvas {
+  <br> canvas {
     border: 1px solid white;
   }
   </style>
