--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -27,7 +27,7 @@
     align-items: center;
     justify-content: center;
   }
-  <br> canvas {
+  canvas {
     border: 1px solid white;
   }
   </style>
