--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -267,11 +267,11 @@ window.onload = function(){
             ctx.fillRect(0,0,canvas.width,canvas.height);
             ctx.fillStyle='#ffffff';
             ctx.font='40px helvatica';
-            ctx.fillText('Ashwani',370,140);
+            ctx.fillText('Ibrahim',370,140);
             ctx.font='20px san-serif';
             ctx.fillText('presents',395,190);
             ctx.font='italic 60px san-serif';
-            ctx.fillText('Classic Snake',240,280);
+            ctx.fillText('The Snake Game',240,280);
             var img = new Image();
             img.onload = function()
             {
