--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -64,7 +64,7 @@ window.onload = function(){
         var direction = 'right';
         var block = 10;
         var score = 0;
-        var refresh_rate = 18;
+        var refresh_rate = 21;
         var pos = [[5,1],[4,1],[3,1],[2,1],[1,1]];
         var scoreboard = document.getElementById('scoreboard');
         var control = document.getElementById('controls');
@@ -229,7 +229,7 @@ window.onload = function(){
                     ctx.fillText('Game Over',300,250);
                     ctx.font = '20px san-serif';
                     ctx.fillStyle='#000000';
-                    ctx.fillText('To Play again Refresh the page or click the Restarts button',200,300);
+                    ctx.fillText('To Play again Refresh the page or click the Restart button',200,300);
                     throw ('Game Over');
             }
             else
@@ -299,7 +299,7 @@ window.onload = function(){
 </script>
 </head>
 <body>
-<canvas width="850" height="600" id="canvas" style="border:1px solid #333;" onclick="snake.game.begin();">
+<canvas width="600" height="600" id="canvas" style="border:1px solid #333;" onclick="snake.game.begin();">
 </canvas>
 <div id="controls" style="float:right; text-align:center;">
     <input type="button" id="pause" value="Play" onClick="snake.game.pause(this);" accesskey="p">
