--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -3,12 +3,15 @@
  background:white;
 <head>
 <title> Ibrahim Ahmed </title>
+ <font color=black>
 </head>
  <font size=5>
 <h1>Hello there!</h1>
   <img style="padding: 0 15px; float: right;" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="525" height="433">
   <p style="margin-top: 20px;"> </p>
+ </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
+ <font color=black>
 <body>
 <h2>This is my <b><i>first</b></i> website</h2>
  <h3> Thanks for visiting my website!</h3>
@@ -17,6 +20,7 @@
  <br> <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=4><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
   <font size=4> Also try out my snake game below </font>
+ </font>
   </body>
  <style>
 body
