--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -20,17 +20,16 @@
  <br> <font size=4><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=4><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
   <font size=4> Also try out my snake game below </font>
- </font>
   </body>
  <style>
 body
 {
-    background:#FFFFFF;
-    color:#FFF;
+    background:#00FFFF;
+    color:	#0000FF;
 }
 canvas
 {
-    background:#FFF;
+    background:	#0000FF;
 }
 #controls
 {
@@ -317,4 +316,5 @@ window.onload = function(){
     <span id="scoreboard">0</span>
     </div>
 </div>
+ </font>
 </html>
