--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -304,7 +304,7 @@ window.onload = function(){
 <body>
 <canvas width="900" height="600" id="canvas" style="border:1px solid #333;" onclick="snake.game.begin();">
 </canvas>
-<div id="controls" style="float:right; text-align:center;">
+<div id="controls" style="float:bottom; text-align:center;">
     <input type="button" id="pause" value="Play" onClick="snake.game.pause(this);" accesskey="p">
     <input type="button" id="restart" value="Restart" onClick="snake.game.restart();">
     <br/><br/>
