--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -276,7 +276,7 @@ window.onload = function(){
             ctx.fillText('presents',395,190);
             ctx.font='italic 60px san-serif';
             ctx.fillText('The Snake Game',240,280);
-            ctx.fillText('Click to Play',395,190);
+            ctx.fillText('Click to Play',250,300
             var img = new Image();
             img.onload = function()
             {
