--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -6,7 +6,10 @@
 </head>
  <font size=5>
 <h1>Hello there!</h1>
-  <img style="padding: 0 15px; float: right;" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="460" height="400">
+  <img style="padding: 0 15px; float: right;" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="460" height="200">
+  <p style="margin-top: 20px;"> </p>
+    <img style="padding: 0 15px; float: right;" src="  <img style="padding: 0 15px; float: right;" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" alt="Trulli" width="460" height="200">
+  <p style="margin-top: 20px;"> </p>" alt="Trulli" width="460" height="200">
   <p style="margin-top: 20px;"> </p>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
