--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -6,8 +6,10 @@
 </head>
  <font size=5>
 <h1>Hello there!</h1>
-  <img style="padding: 0 15px; float: right;" src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" alt="Trulli" width="460" height="400">
-  <p style="margin-top: 20px;"> </p>
+ <div id="img">
+    <img src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif">
+    <img src=" src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif">
+</div>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
