--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -7,7 +7,7 @@
  <font size=5>
 <h1>Hello there!</h1>
  <div id="img">
-<IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" height="400" width="200" align=right border=10px>
+<IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" align=right border=10px>
     <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" align=right border=10px>
 </div>
  </font>
