--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -8,7 +8,7 @@
 <h1>Hello there!</h1>
  <div id="img">
     <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" align=right border=10px>
-    <br><IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" align=right border=10px>
+    <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" align=right border=10px>
 </div>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
