--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -11,8 +11,8 @@
   <border=10px>
     <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif">
     <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif">
-     </align=right>
-     </border=10px>
+     </align>
+     </border>
 </div>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
