--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -9,7 +9,7 @@
  <div id="img">
   <align=right>
   <border=10px>
-    <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif">
+    <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=400 height=400>
     <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif">
      </align>
      </border>
