--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -7,12 +7,8 @@
  <font size=5>
 <h1>Hello there!</h1>
  <div id="img">
-  <align=right>
-  <border=10px>
-    <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=400 height=400>
-    <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif">
-     </align>
-     </border>
+    <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=400 height=300 align=right border=10px>
+    <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=400 height=300 align=right border=10px>
 </div>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
