--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -7,8 +7,8 @@
  <font size=5>
  <h1>Hello there!</h1>
 <div id="img">
-    <IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=300 height=300 align=right border=10px>
-    <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=300 height=300 align=right border=10px>  
+    <IMG class="one" src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=300 height=300 align=right border=10px>
+    <IMG class="two" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=300 height=300 align=right border=10px>  
 </div>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
@@ -271,12 +271,12 @@ window.onload = function(){
             ctx.fillRect(0,0,canvas.width,canvas.height);
             ctx.fillStyle='#ffffff';
             ctx.font='40px helvatica';
-            ctx.fillText('Ibrahim',390,140);
+            ctx.fillText('Ibrahim',790,140);
             ctx.font='20px san-serif';
-            ctx.fillText('presents',415,190);
+            ctx.fillText('presents',815,190);
             ctx.font='italic 60px san-serif';
-            ctx.fillText('The Snake Game',260,280);
-            ctx.fillText('Click to Play',290,400);
+            ctx.fillText('The Snake Game',660,280);
+            ctx.fillText('Click to Play',690,400);
             var img = new Image();
             img.onload = function()
             {
