--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -6,10 +6,12 @@
 </head>
  <font size=5>
  <h1>Hello there!</h1>
-<div id="img">
+<div>
     <IMG class="one" src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=300 height=300 align=right border=10px>
-    <IMG class="two" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=300 height=300 align=right border=10px>  
-</div>
+  </div>
+ <div>
+<IMG class="two" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=300 height=300 align=right border=10px>
+  </div>
  </font>
 <font size="10" color="green">My name is <b><i>Ibrahim</b></i>.</font>
  <font color=black>
@@ -229,10 +231,10 @@ window.onload = function(){
                     snake.game.status=false;
                     ctx.clearRect(0,0,canvas.width,canvas.height);
                     ctx.font='40px san-serif';
-                    ctx.fillText('Game Over',326,250);
+                    ctx.fillText('Game Over',470,250);
                     ctx.font = '20px san-serif';
                     ctx.fillStyle='#000000';
-                    ctx.fillText('To Play again Refresh the page or click the Restart button',200,300);
+                    ctx.fillText('To Play again Refresh the page or click the Restart button',370,300);
                     throw ('Game Over');
             }
             else
@@ -271,12 +273,12 @@ window.onload = function(){
             ctx.fillRect(0,0,canvas.width,canvas.height);
             ctx.fillStyle='#ffffff';
             ctx.font='40px helvatica';
-            ctx.fillText('Ibrahim',790,140);
+            ctx.fillText('Ibrahim',540,140);
             ctx.font='20px san-serif';
-            ctx.fillText('presents',815,190);
+            ctx.fillText('presents',565,190);
             ctx.font='italic 60px san-serif';
-            ctx.fillText('The Snake Game',660,280);
-            ctx.fillText('Click to Play',690,400);
+            ctx.fillText('The Snake Game',410,280);
+            ctx.fillText('Click to Play',440,400);
             var img = new Image();
             img.onload = function()
             {
