--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -24,7 +24,7 @@
 </div>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
- <font size=5 color="blue"> <b>Also try out my snake game below </b></font>
+  <font size=5> <b><u>Also try out my snake game below</u></b></font>
   </body>
  <style>
 body
