--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,7 +4,7 @@
 <title> Ibrahim Ahmed </title>
  <font color=black>
 <div>
-<IMG class="two" src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=375 height=300 align=right border=10px>
+<IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=375 height=300 align=right border=10px>
 </div>
 </head>
  <font size=5>
@@ -20,7 +20,7 @@
  </font>
   <font size=5> Check out: </font>
  <div>
-<IMG class="one" src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=375 height=300 align=right border=10px>
+<IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=375 height=300 align=right border=10px>
 </div>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
