--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -4,22 +4,21 @@
 <title>Damian Hernandez/About Me</title
 </head>
 <body>
+	border-style: dashed;
+	border-width: thick;
+	border-color: green;
+	background-image: url("https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj7i-mO0p3eAhVLilQKHY2TDkQQjRx6BAgBEAU&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DZ9q8O4N6h6U&psig=AOvVaw1CglGz2ntjfE-3abYSeqKV&ust=1540420945433067")
 (info)
 
 <p>
-HEHEHEHEHHE
-This is my favorite video: <a href="https://www.youtube.com/watch?v=6-HUgzYPm9g>LOL noice</a></p>>
-<img src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj7i-mO0p3eAhVLilQKHY2TDkQQjRx6BAgBEAU&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DZ9q8O4N6h6U&psig=AOvVaw1CglGz2ntjfE-3abYSeqKV&ust=1540420945433067">
+This is my favorite video: <a href="https://www.youtube.com/watch?v=6-HUgzYPm9g>My fav vid<a/><p/>>
+
 Favorite Games
 <ul>
 	<li>Minecraft</li>
 	<li>Fortnite</li>
 	<li>PUBG</li>
 	<li>Clash Royale</li>
-</ul> <br>
-LOLOLOLOLOLOLOL
-</br>
-
 </p>
 
 </body>
