--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -3,11 +3,12 @@
 <head>
 <title>Damian Hernandez/About Me</title
 </head>
-<body>
+<body>{
 	border-style: dashed;
 	border-width: thick;
 	border-color: green;
 	background-image: url("https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj7i-mO0p3eAhVLilQKHY2TDkQQjRx6BAgBEAU&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DZ9q8O4N6h6U&psig=AOvVaw1CglGz2ntjfE-3abYSeqKV&ust=1540420945433067")
+}
 (info)
 
 <p>
