--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -13,7 +13,7 @@
 
 <p>
 This is my favorite video: <a href="https://www.youtube.com/watch?v=6-HUgzYPm9g>My fav vid<a/><p/>>
-
+LEL
 Favorite Games
 <ul>
 	<li>Minecraft</li>
