--- a/student_14/hajime.html
+++ b/student_14/hajime.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 <title>Hajime About Me</title>
+<style type="text/css".
+body{
+border-style: dashed
+border-width: thick
+border-color: blue
+background-color: grey
+}
 </head>
 <body>
 Hello World!!!
