--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -12,7 +12,7 @@
 (info)
 
 <p>
-This is my favorite video: <a href="https://www.youtube.com/watch?v=VVggXZPCuYw>My fav vid<a/><p/>>
+This is my favorite video: <a href="https://www.youtube.com/watch?v=VVggXZPCuYw>My fav vid</a></p>>
 LEL
 Favorite Games
 <ul>
