--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -3,7 +3,7 @@
 <head>
 <title>Damian Hernandez/About Me</title
 </head>
-<body>{
+body{
 	border-style: dashed;
 	border-width: thick;
 	border-color: green;
