--- a/student_16/bout meboii.html
+++ b/student_16/bout meboii.html
@@ -3,6 +3,7 @@
 <head>
 <title>Damian Hernandez/About Me</title
 </head>
+	<style type="text/css">
 body{
 	border-style: dashed;
 	border-width: thick;
