--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Ibrahim Ahmed </title>
+ <style type="text /css;> body{ border-style: dashed border-width: 5px }
  <font color=black>
 <div>
 <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=375 height=300 align=right border=10px>
