--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <title> Ibrahim Ahmed </title>
-    body{ border-style: dashed 
- border-width: 5px }
+    body{ border-style: dashed; 
+ border-width: 5px;
+    }
  <font color=black>
 <div>
 <IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=375 height=300 align=right border=10px>
