--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <title> Ibrahim Ahmed </title>
+    <script>
     body{ border-style: dashed; 
  border-width: 5px;
+    </script>
     }
  <font color=black>
 <div>
