--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -3,8 +3,8 @@
 <head>
 <title> Ibrahim Ahmed </title>
     <script>
-    body{ border-style: dashed; 
- border-width: 10px;
+    body{ border-style: dashed;}
+        {border-width: 10px;}
     </script>
     }
     </head>
