--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title> Ibrahim Ahmed </title>
-    <script>
+    <style>
     body{ border-style: dashed;}
         {border-width: 10px;}
-    </script>
+    </style>
     }
     </head>
  <font color=black>
