--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -4,7 +4,8 @@
 <title> Ibrahim Ahmed </title>
     <style>
     body{ border-style: dashed;}
-        {border-width: 10px;}
+        {border-width: 20px;}
+        {border-color: green;}
     </style>
     }
     </head>
