--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -5,9 +5,8 @@
     <style>
     body{ border-style: dashed;}
         {border-width: 20px;}
-        {border-color: green;}
+        {border-color: 	#006400;}
     </style>
-    }
     </head>
  <font color=black>
 <div>
