--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -13,7 +13,7 @@
     </head>
  <font color=black>
 <div>
-<IMG src="https://media.giphy.com/media/26xBwdIuRJiAIqHwA/source.gif" width=375 height=300 align=right border=10px>
+<IMG src="https://tenor.com/view/gif-12812683" width=375 height=300 align=right border=10px>
 </div>
  <font size=5>
  <h1>Hello there!</h1>
@@ -28,7 +28,7 @@
  </font>
   <font size=5> Check out: </font>
  <div>
-<IMG src="https://media.giphy.com/media/2YiR2IbNj8za5j701k/giphy.gif" width=375 height=300 align=right border=10px>
+<IMG src="https://tenor.com/view/gif-12812706" width=375 height=300 align=right border=10px>
 </div>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
