--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -13,7 +13,7 @@
     </head>
  <font color=black>
 <div>
-<IMG src="https://tenor.com/1Vkl.gif" width=375 height=300 align=right border=10px>
+<IMG src="<div class="tenor-gif-embed" data-postid="12812706" data-share-method="host" data-width="100%" data-aspect-ratio="1.4634146341463414"><a href="https://tenor.com/view/gif-12812706">GIF</a> </div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>" width=375 height=300 align=right border=10px>
 </div>
  <font size=5>
  <h1>Hello there!</h1>
