--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -13,7 +13,7 @@
     </head>
  <font color=black>
 <div>
-<IMG src="https://tenor.com/view/gif-12812683" width=375 height=300 align=right border=10px>
+<IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=375 height=300 align=right border=10px>
 </div>
  <font size=5>
  <h1>Hello there!</h1>
