--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -28,7 +28,7 @@
  </font>
   <font size=5> Check out: </font>
  <div>
-<IMG src="https://tenor.com/1VkI.gif" width=375 height=300 align=right border=10px>
+<IMG src="https://media1.tenor.com/images/d3bb43ed8a124e1342077b536d46e023/tenor.gif?itemid=12812706" width=375 height=300 align=right border=10px>
 </div>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
