--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -32,8 +32,8 @@
 <IMG src="https://media1.tenor.com/images/d3bb43ed8a124e1342077b536d46e023/tenor.gif?itemid=12812706" width=375 height=330 align=right border=10px>
 </div>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
-  <font size=5> <b><u>Also try out my snake game below</u></b></font></ul>
-	<p>|<br>|<br>|<br>V</p>
+  <font size=5> <b><u>Also try out my snake game below</u></ul>
+		<p>						|<br>|						|<br>						|<br>						|<br>						|<br>						|<br>						|<br>						|<br>						|<br>						\  /<br						\/</p></b></font>
   </body>
  <style>
 body
