--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -12,7 +12,7 @@ Information you will put in the body of the website
 <p>
 This is my favorite video
 <a href="https://www.YouTube.com">My Favorite Video!</a>
-	<a href="thanksgiving.html">Thanksgiving</a>
+<a href="thanksgiving.html">Thanksgiving</a><br>
 <img src="https://s.abcnews.com/images/Lifestyle/puppy-ht-3-er-170907_4x3_992.jpg"><br>
 Favorite Foods
 <ul>
