--- a/student_21/ThanksGiving.html
+++ b/student_21/ThanksGiving.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body{
+background-image: url("https://png.pngtree.com/thumb_back/fw800/back_pic/03/87/17/0857d1192214be1.jpg");
+}
 <title> Hi
 Guys
 </title>
