--- a/student_31/Aram About-me.html
+++ b/student_31/Aram About-me.html
@@ -19,7 +19,11 @@ I am Aram Arzumanyan. I am 12 years old and my friend consider me boring, funny,
 <p>
 The Most Popular Video
 <a href="https://www.youtube.com/watch?v=U06jlgpMtQs">The Most Popular Video!</a>
-<img src="https://i.kym-cdn.com/photos/images/newsfeed/001/342/713/3df.png"><br>
+	
+
+<a href="thanksgiving.html">Tanksgiving Page!</a>
+	
+<img src="https://ih1.redbubble.net/image.521720510.4916/stf,small,600x600-c,0,0,1000,1000.u1.jpg"><br>
 Favorite Foods
 <ul>
 	<li>Dolma</li>
