--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -15,6 +15,7 @@
 <div>
 <IMG src="https://techflourish.com/images/cartoon-turkey-shoot-clipart-4.gif" width=410 height=370 align=right border=10px>
 </div>
+	<font color="green">
  <font size=5>
  <h1>Hello there!</h1>
  </font>
@@ -37,4 +38,5 @@
 	<div>
 <IMG src="http://www.gifs.cc/thanksgiving/happy-turkey-day.gif" width=410 height=370 align=right border=10px>
 </div>
+		</font>
   </body>
