--- a/student_24/Thanksgiving.html
+++ b/student_24/Thanksgiving.html
@@ -1,1 +1,14 @@
-
+<! DOCTYPE>
+<html>
+<title>
+Thanksgiving
+</title>
+<head>
+<font-family: VerdanaHappy Thanksgiving!
+</head>
+<style type="text/css">
+body{
+	background-image: url()
+}
+</style>
+</html>
