--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -5,6 +5,8 @@
     <style>
      body{
 	background-image: url("https://i.gifer.com/PRV9.gif");
+	     background-repeat: no-repeat; 
+background-position: center center;
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
