--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -31,9 +31,10 @@ background-position: center center;
 <br>
  </font>
   <font size=5> Very happy thanksgiving you shall have! </font>
- <p>Eat turkeys<br>
+ <p><font size=5>Eat turkeys<br>
  Eat mashed potatoes<br>
  Have fun
+	 </font>
  </p>
 	<div>
 <IMG src="http://www.gifs.cc/thanksgiving/happy-turkey-day.gif" width=410 height=370 align=right border=10px>
