--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -24,6 +24,10 @@ background-position: center center;
  <h2>We all know Thanksgiving is coming up<br>
  Thanksgiving is a time of giving thanks<br>
  Enjoy Thanksgiving!
+	 
+Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?
+Phil: Why?
+Josh: He wanted to raise mashed potatoes.
  </h2>
  <font color=black>
 <body>
