--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -23,11 +23,11 @@ background-position: center center;
  </font>
  <h2>We all know Thanksgiving is coming up<br>
  Thanksgiving is a time of giving thanks<br>
- Enjoy Thanksgiving!
+ Enjoy Thanksgiving!<br>
 	 
-Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?
-Phil: Why?
-Josh: He wanted to raise mashed potatoes.
+Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?<br>
+Phil: Why?<br>
+Josh: He wanted to raise mashed potatoes.<br>
  </h2>
  <font color=black>
 <body>
