--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -21,14 +21,14 @@ background-position: center center;
  <font size=7>
  <h1>Hello there!</h1>
  </font>
- <h2>We all know Thanksgiving is coming up<br>
+ <p>We all know Thanksgiving is coming up<br>
  Thanksgiving is a time of giving thanks<br>
  Enjoy Thanksgiving!<br>
 	 
 Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?<br>
 Phil: Why?<br>
 Josh: He wanted to raise mashed potatoes.<br>
- </h2>
+ </p>
  <font color=black>
 <body>
 <font size=7>
