--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -19,15 +19,15 @@ background-position: center center;
 	<font color="green">
  <font size=7>
  <h1>Hello there!</h1>
- </font>
- <p>We all know Thanksgiving is coming up<br>
- Thanksgiving is a time of giving thanks<br>
+ <p>We all know Thanksgiving is coming up, and<br>
+ Thanksgiving is a time of giving thanks.<br>
  Enjoy Thanksgiving!<br>
 	 
 Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?<br>
 Phil: Why?<br>
 Josh: He wanted to raise mashed potatoes.<br>
  </p>
+	 </font>
 <body>
 <font size=7>
 <br>
