--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -22,17 +22,17 @@ background-position: center center;
  <p>We all know Thanksgiving is coming up, and<br>
  Thanksgiving is a time of giving thanks.<br>
  Enjoy Thanksgiving!<br>
-	 
+		</font> <br><br>
 Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?<br>
 Phil: Why?<br>
 Josh: He wanted to raise mashed potatoes.<br>
  </p>
 	 </font>
 <body>
-<font size=7>
+<font size=5>
 <br>
-  <font size=7> Very happy thanksgiving you shall have! </font>
- <p><font size=7>Eat turkeys<br>
+  <font size=5> Very happy thanksgiving you shall have! </font>
+ <p><font size=5>Eat turkeys<br>
  Eat mashed potatoes<br>
  Have fun
 	 </font>
