--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -22,10 +22,11 @@ background-position: center center;
  <p>We all know Thanksgiving is coming up, and<br>
  Thanksgiving is a time of giving thanks.<br>
  Enjoy Thanksgiving!<br>
-		</font> <br><br>
+		</font> <br><br><font size=6>
 Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?<br>
 Phil: Why?<br>
 Josh: He wanted to raise mashed potatoes.<br>
+</font>
  </p>
 	 </font>
 <body>
