--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -24,7 +24,8 @@
 <font size=5>
 <br>
 <h2>This is my <b><i>first</b></i> website</h2>
- <h3> Thanks for visiting my website!</h3>
+	<h3>Thanksgiving is coming up, so <a href="https://roosevelt-coding.github.io/student_02/IbrahimThanksgiving.html"> Happy Thanksgiving! </a>
+ <h4> Thanks for visiting my website!</h4>
  </font>
   <font size=5> Check out: </font>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
