--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -5,14 +5,31 @@
 <title> What you want to name your website
 My Website
 </title>
+<style type="text/css">
+body{
+color: blue;
+}
+#transition{
+	width:150px;
+	height: 50px;
+	background: teal;
+	transition: height 2s;
+}
+#transition:hover{
+	height: 300px;
+}
+</style>
 </head>
+
 <body>
 <h1> This is my header! </h1>
 Information you will put in the body of the website
 <p>
 This is my favorite video
-<a href="https://www.YouTube.com">My Favorite Video!</a>
-<a href="thanksgiving.html">Thanksgiving</a><br>
+<a href="http://www.Youtube.com"> Youtube! </a>
+
+<a href="thanksgiving.html">Thanksgiving Page!</a>
+
 <img src="https://s.abcnews.com/images/Lifestyle/puppy-ht-3-er-170907_4x3_992.jpg"><br>
 Favorite Foods
 <ul>
@@ -26,6 +43,11 @@ Favorite Games
 </ol>
 
 </p>
+
+<marquee> hi there </marquee>
+
+<div id="transition"> Transition! </div>
+
 </body>
 </html>
 
