--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -19,7 +20,25 @@ color: blue;
 }
 </style>
 </head>
-
+<head>
+<title> What you want to name your website
+My Website
+</title>
+<style type="text/css">
+body{
+color: blue;
+}
+#transition{
+	width:150px;
+	height: 50px;
+	background: teal;
+	transition: height 2s;
+}
+#transition:hover{
+	height: 300px;
+}
+</style>
+</head>
 <body>
 <h1> This is my header! </h1>
 Information you will put in the body of the website
