--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -23,7 +23,7 @@
 <body>
 <font size=5>
 <br>
-<h2>This is my <b><i>first</b></i> website</h2>
+	<marquee><h2>This is my <b><i>first</b></i> website</h2></marquee>
 	<h3>Thanksgiving is coming up, so <a href="https://roosevelt-coding.github.io/student_02/IbrahimThanksgiving.html"> Happy Thanksgiving! </a>
  <h4> Thanks for visiting my website!</h4>
  </font>
