--- a/student_02/IbrahimThanksgiving.html
+++ b/student_02/IbrahimThanksgiving.html
@@ -21,7 +21,8 @@ background-position: center center;
  <h1>Hello there!</h1>
  <p>We all know Thanksgiving is coming up, and<br>
  Thanksgiving is a time of giving thanks.<br>
- Enjoy Thanksgiving!<br>
+	 <marquee>
+		 Enjoy Thanksgiving!<br> </marquee>
 		</font> <br><br><font size=6>
 Josh: Why did the farmer run a steamroller over his potato field on Thanksgiving Day?<br>
 Phil: Why?<br>
