--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -9,11 +9,10 @@
 	border-width: 20px;
 	border-color: green;
 }
-	    }
 #transition{
 	width:150px;
 	height: 50px;
-	background: teal;
+	background: green;
 	transition: height 2s;
 }
 #transition:hover{
@@ -33,7 +32,7 @@
  <font color=black>
 <body>
 <font size=5>
-<br>
+	<div id="transition"> Hola </div>
 	<marquee><h2>This is my <b><i>first</b></i> website</h2></marquee>
 	<h3>Thanksgiving is coming up, so <a href="https://roosevelt-coding.github.io/student_02/IbrahimThanksgiving.html"> Happy Thanksgiving! </a>
  <h4> Thanks for visiting my website!</h4>
