--- a/student_09/thanksgiving.html
+++ b/student_09/thanksgiving.html
@@ -12,7 +12,7 @@ Hello everyone this is my thanksgiving page.
 body{
 	border-style: dotted;
 	border-width: thick;
-	border-color: green;
+	border-color: yellow;
 	background-color: teal;}
 </style>
 <font color="red">i love blue!</font>
