--- a/student_09/thanksgiving.html
+++ b/student_09/thanksgiving.html
@@ -10,10 +10,10 @@ Hello everyone this is my thanksgiving page.
 <h3>TO THE SIZE?</h3>
 <style type="text/css">
 body{
-	border-style: dotted;
+	border-style: dashed;
 	border-width: thick;
-	border-color: yellow;
-	background-color: teal;}
+	border-color: black;
+	background-color: yellow;}
 </style>
 <font color="red">i love blue!</font>
 <font color="blue">wait what that wasn't blue!</font>
