--- a/thanksgiving.html
+++ b/thanksgiving.html
@@ -7,6 +7,17 @@ Thanksgiving!
 
 <body>
 
+}
+#transition{
+	width:1000px;
+	height: 1000px;
+	background: teal;
+	transition: height 5s;
+}
+#transition:hover{
+	height: 300px;
+}	
+	
 Happy Thanksgiving, world!
 
 <p>
