--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -13,7 +13,7 @@
 	width:150px;
 	height: 50px;
 	background: green;
-	transition: width 2s;
+	transition: height 2s;
 }
 #transition:hover{
 	height: 300px;
