--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -13,7 +13,7 @@
 	width:150px;
 	height: 50px;
 	background: green;
-	transition: height 4s;
+	transition: width 4s;
 }
 #transition:hover{
 	height: 300px;
