--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -39,7 +39,7 @@
   <font size=5> Check out: </font>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
 	<div>
-<IMG src="https://media1.tenor.com/images/d3bb43ed8a124e1342077b536d46e023/tenor.gif?itemid=12812706" width=500 height=500 align=right border=10px>
+<IMG src="https://media.tenor.com/images/e634fee2ccd461877d7ddf9d14909b1f/tenor.gif" width=500 height=500 align=right border=10px>
 </div>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
   <font size=5> <b><u>Also try out my snake game below</u></ul>
