--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -13,9 +13,10 @@
 	width:150px;
 	height: 50px;
 	background: green;
-	transition: width 4s;
+	transition: width 2s;
 }
 #transition:hover{
+	width: 300px;
 	height: 300px;
 }
     </style>
