--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -12,10 +12,11 @@
 #transition{
 	width:270px;
 	height: 270px;
-	background: green;
+	background: blue;
 	transition: width 2s;
 }
 #transition:hover{
+	background: blue;
 	width: 500px;
 	height: 500px;
 }
