--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -19,6 +19,7 @@
 	background: green;
 	width: 450px;
 	height: 450px;
+	    }
 	div:after {
     content: "New";
     opacity: 0;
@@ -43,7 +44,6 @@ div:after, div:before {
     </style>
     </head>
  <font color=black>
-<div>
 <IMG src="https://media1.tenor.com/images/ff2a48177c879bfc7d7f4bd9cda4d66c/tenor.gif?itemid=12812683" width=500 height=500 align=right border=10px>
 </div>
  <font size=5>
@@ -53,14 +53,14 @@ div:after, div:before {
  <font color=black>
 <body>
 <font size=5>
-	<div id="transition"> Hola </div>
+	<div class="wrap">
+</div>
 	<marquee><h2>This is my <b><i>first</b></i> website</h2></marquee>
 	<h3>Thanksgiving is coming up, so <a href="https://roosevelt-coding.github.io/student_02/IbrahimThanksgiving.html"> Happy Thanksgiving! </a>
  <h4> Thanks for visiting my website!</h4>
  </font>
   <font size=5> Check out: </font>
  <br> <ul><font size=5><i><u><a href="http:/thisisnotavirus.com"> Don't worry, this is not a virus.</a></u></i> It is a cool website.</font>
-	<div>
 <IMG src="https://media.tenor.com/images/e634fee2ccd461877d7ddf9d14909b1f/tenor.gif" width=500 height=500 align=right border=10px>
 </div>
  <p><font size=5><i><u><a href="http://www.coolmathgames.com">Another very cool website (not a virus)</a></u></i> that you should visit right here. In this website, you can do many things and have fun. You deserve it because you visited my website.</font></p>
