--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -62,8 +62,13 @@ h1 {
  <font color=black>
 <body>
 <font size=5>
-	<div id="transition">
+	<div class="my_div">
+  <h1 class="title">
+        <span class="old-text">Bring your mouse over here</span>
+        <span class="new-text">A wild text appears!</span>
+     </h2>
 </div>
+
 	<marquee><h2>This is my <b><i>first</b></i> website</h2></marquee>
 	<h3>Thanksgiving is coming up, so <a href="https://roosevelt-coding.github.io/student_02/IbrahimThanksgiving.html"> Happy Thanksgiving! </a>
  <h4> Thanks for visiting my website!</h4>
