--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -65,7 +65,13 @@ h1 {
 	<div class="my_div">
   <h1 class="title">
         <span class="old-text">Bring your mouse over here</span>
-        <span class="new-text">A wild text appears!</span>
+        <span class="Magic! <br> I am a 7th grader at Roosevelt Middle School, and my classes are: <ol> P.E.
+		     English
+		     Band
+		     History
+		     Robotics
+		     Math
+		     Science</span>
      </h2>
 </div>
 
