--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -18,7 +18,7 @@
 .my_div:hover {
   background-color: green;
   	width: 450px;
-	height: 410px;
+	height: 430px;
 }
 h1 {
   overflow: hidden;
@@ -64,14 +64,14 @@ h1 {
 <font size=5>
 	<div class="my_div">
   <h1 class="title">
-        <span class="old-text">Bring your mouse over here</span>
-        <span class="Magic! <br> I am a 7th grader at Roosevelt Middle School, and my classes are: P.E.
-		     English
-		     Band
-		     History
-		     Robotics
-		     Math
-		     Science"</span>
+        <span class="old-text">Bring your mouse over here for some info</span>
+        <span class="new-text"> I am a 7th grader at Roosevelt Middle School, and my classes are: <ol> P.E.,
+		     English,
+		     Band,
+		     History,
+		     Robotics,
+		     Math,
+		     Science</span>
      </h2>
 </div>
 
