--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -18,7 +18,7 @@
 .my_div:hover {
   background-color: green;
   	width: 665px;
-	height: 430px;
+	height: 445px;
 }
 h1 {
   overflow: hidden;
@@ -70,7 +70,7 @@ h1 {
 		     Band,
 		     History,
 		     Robotics,
-		     Math,
+		     Math, and
 		Science </ol></span>
      </h2>
 </div>
