--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -7,7 +7,8 @@ My Website
 <style type="text/css">
 body{
 	color: red;
-	font-size: 48px;
+	font-size: 148px;
+	font-family: Verdana, sans-serif;
 }
 #transition{
 	width:150px;
