--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -9,6 +9,11 @@ body{
 	color: red;
 	font-size: 148px;
 	font-family: Verdana, sans-serif;
+	font-weight: bolder;
+	font-style: italic;
+}
+h1{
+	color: green;
 }
 #transition{
 	width:150px;
