--- a/student_27/KayleighAboutMe.html
+++ b/student_27/KayleighAboutMe.html
@@ -32,7 +32,7 @@ h1{
 Information you will put in the body of the website
 <p>
 This is my favorite video
-<a href="http://www.Youtube.com"> Youtube! </a>
+<a href="https://www.w3schools.com/cssref/css_websafe_fonts.asp"> CHECK OUT THESE FONTS! </a>
 
 <a href="thanksgiving.html">Thanksgiving Page!</a>
 
