--- a/student_24/Thanks.giving.html
+++ b/student_24/Thanks.giving.html
@@ -31,7 +31,7 @@ body{
 </ul>
 </p>
 <h1>
-<b>Visit my about me page at <a href="https://roosevelt-coding.github.io/student_24/alia.html">this website.</a>
+<b>Visit my website!<a href="https://roosevelt-coding.github.io/student_24/alia.html">My Website!.</a>
 </h1>
 </body>
 </html>
