--- a/student_14/thanksgiving.html
+++ b/student_14/thanksgiving.html
@@ -1,1 +1,18 @@
+<! DOCTYPE html>
+<html>
+<h1> this is my thanksgiving website... </h1>
+<h2> I don't even know why I even bothered to write this... <h2>
+<h3> I will repeat from my previous website, Henry's pineapple on pizza website is a horrible one and do not recommend it since it has the worst ratings in website history... </h3>
+<h4> one thing is for sure, I'm thankful that I haven't had to eat Pineapple on Pizza in a long time... </h4>
+#transition {
+ width: 150px;
+ height: 50px;
+ background: teal;
+transition: width/height 2s;
+}
+#transition:hover; {
+ width/height: 300px;
+}
 
+<div id="transition"> For all your non- Pineaple on Pizza needs! </div>
+</html>
