--- a/student_14/hajime.html
+++ b/student_14/hajime.html
@@ -1,18 +1,20 @@
- <! DOCTYPE html>
+<! DOCTYPE html>
 <html>
 <head>
 <title>Hajime About Me</title>
-<style type="text/css".
+<style type="text/css">
 body{
 border-style: dashed
 border-width: thick
 border-color: blue
 background-color: grey
-}
+} </style>
 </head>
 <body>
 Hello World!!!
+
 <h1> I'm Hajime!!! </h1>
+<marquee> BREAKING NEWS: Notorious criminal Henry Guske has recently started a Pineapple on Pizza cult and is currently terrorizing many innocent people around the world, please be careful when you go outside </marquee>
 <h2> I love coding and this is my website!!! (no i don't) </h2>
 <p> I'm <b>stupid</b>!!! (^_^) </p>
 <p> Welcome to my website </p>
@@ -33,4 +35,5 @@ Hello World!!!
 <h5> (Don't go to Henry's Website, it will Scar you Forever) </h5>
 <h6> MY LIFE IS A LIE... </h6>
 <h7> Seriously though, I DON'T recommend Henry's website </h7>
+<marquee> BREAKING NEWS: The Pineapple on Pizza cult led by Henry is currently making a dumb and useless website for his Pineapple on Pizza crap </marquee>
 </html>
