--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -8,6 +8,7 @@
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
+	font-family: Architect's Daughter, sans-serif;
 }
 .my_div {
   background-color: red;
