--- a/student_09/hi.html
+++ b/student_09/hi.html
@@ -2,6 +2,28 @@
 <html>
 <head>
 <title>MY FIRST WEBSITE</title>
+	<style type="text/css">
+body{
+	color: teal;
+	font-size: 48px;
+	font-family: Comic Sans MS, sans-serif;
+	font-weight: bolder;
+	font-style: italic;
+}
+h1{
+	color: blue;
+	font-family: Lucida Sans Unicode, sans-serif;
+}
+#transition{
+	width:150px;
+	height: 50px;
+	background: white;
+	transition: height 1s;
+}
+#transition:hover{
+	height: 300px;
+}
+</style>
 </head>
 <body>
 Hello World! This is an about me website.
