--- a/student_02/IbrahimAhmed.html
+++ b/student_02/IbrahimAhmed.html
@@ -8,7 +8,7 @@
 	border-style: dashed;
 	border-width: 20px;
 	border-color: green;
-	font-family: Architects Daughter, sans-serif;
+	font-family: "Architects Daughter", sans-serif;
 }
 .my_div {
   background-color: red;
