--- a/student_11/thanksgiving.html
+++ b/student_11/thanksgiving.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>
-Thanksgiving!
+<title> Thanksgiving!
+My Website
 </title>
-
-<body>
-
+<style type="text/css">
+body{
+	color: red;
+	font-size: 48px;
+	font-family: Verdana, sans-serif;
+	font-weight: bolder;
+	font-style: italic;
+}
+h1{
+	color: green;
+	font-family: Georgia, sans-serif;
 }
 #transition{
-	width:100px;
-	height: 100px;
+	width:150px;
+	height: 50px;
 	background: teal;
-	transition: height 5s;
+	transition: height 2s;
 }
 #transition:hover{
 	height: 300px;
-}	
-	
-Happy Thanksgiving, world!
-
+}
+</style>
+</head>
+<body>
+<h1> Happy Thanksgiving! </h1>
+Thanksgiving Day is a national holiday celebrated on various dates in Canada, the United States, some of the Caribbean islands, and Liberia. It began as a day of giving thanks for the blessing of the harvest and of the preceding year. Similarly named festival holidays occur in Germany and Japan.
 <p>
-Here's a video that shows the history of Thanksgiving! <a href="https://www.youtube.com/watch?v=faUYJ9fMiGg"> History of Thanksgiving </a>
-<img src="https://s.hswstatic.com/gif/thanksgiving-orig.jpg"><br>
+This is my favorite video
+<a href="https://www.youtube.com/watch?v=ociHVDWxDaY"> Thanksgiving's History </a>
 
-Foods to eat during Thanksgiving
+<img src="https://s.hswstatic.com/gif/thanksgiving-orig.jpg"><br>
+Foods to Eat During Thanksgiving
 <ul>
 	<li>Turkey</li>
-	<li>Mashed Potatoes<li>
-	<li>Gravy<li>
-	<li>Pumpkin Pie<li>
+	<li>Mashed Potatoes</li>
+</ul><br>
+Games to Play with Family
+<ol>
+	<li>Fortnite</li>
+	<li>Mario Party</li>
+	<li>Smash Bros</li>
+	<li>Mario Kart</li>
+</ol>
 
 </p>
+
+<marquee> Happy Thanksgiving Bois </marquee>
+
+<div id="transition"> yeet </div>
 
 </body>
 </html>
